fix buttons on mobile

--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -57,7 +57,7 @@
 }
 
 button {
-    padding: 0.25rem;
+    padding: 0.125rem;
 }
 
 select {
